--- a/UrbanDjango/templates/third_task/basket_page.html
+++ b/UrbanDjango/templates/third_task/basket_page.html
@@ -149,8 +149,7 @@
     </style>
     <script>
         function purchaseItem(itemName) {
-            alert(`Лучше переведи мне эти
-            деньги на счет, если карман жгут:`);
+            alert(`Лучше переведи мне эти деньги на счет, если карман жгут:`);
         }
     </script>
     <script>
