--- a/UrbanDjango/templates/third_task/main_page.html
+++ b/UrbanDjango/templates/third_task/main_page.html
@@ -14,7 +14,7 @@
         }
 
         header {
-            background-color: #333;
+            background-color: #666666;
             color: #fff;
             padding: 20px 0;
         }
@@ -128,6 +128,7 @@
             overflow-wrap: break-word;
             position: absolute;
             top: 300px;
+            text-align: left;
         }
 
         .achievements {
@@ -185,7 +186,8 @@
     </section>
 
     <section class="achievements">
-        <h2>Наши достижения</h2>
+        <h2>---- Наши достижения ----</h2>
+        <h2>-------------------------------------</h2>
         <ul>
             <li>Продали 10 000 пар носков с ракетами за одну неделю!</li>
             <li>Наши клиенты летают выше всех (буквально).</li>
@@ -194,9 +196,10 @@
     </section>
 
     <section class="why-us">
-        <h2>Почему именно мы?</h2>
-        <p>Мы точно знаем, что вам нужно. Даже если вы об этом ещё не догадывались.</p>
-        <p>У нас можно купить шляпу, которая поднимет вашу самооценку. И да, она светится.</p>
+        <h2>-- Почему именно мы? --</h2>
+        <h2>-------------------------------------</h2>
+        <p><strong>1.</strong> Мы точно знаем, что вам нужно. Даже если вы об этом ещё не догадывались.</p>
+        <p><strong>2.</strong> У нас можно купить шляпу, которая поднимет вашу самооценку. И да, она светится.</p>
     </section>
 
     <section class="reviews">
