--- a/UrbanDjango/static/style.css
+++ b/UrbanDjango/static/style.css
@@ -1,5 +1,3 @@
-<!------------- Main page style ---------------->
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -8,29 +6,88 @@ body {
     text-align: center;
 }
 
-header {
-    background-color: #666666;
-    color: #fff;
-    padding: 20px 0;
-    text-align: center;
-    position: relative;
 
+/* Стили для header */
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #666666;
+    position: relative; /* Добавлено для абсолютного позиционирования меню */
+}
+
+header .logo {
+    display: flex;
+    align-items: center;
+}
+
+header .logo img {
+    height: 50px;
 }
 
 header h1 {
-
-    font-size: 3em;
     margin: 0;
-
+    color: white;
+    font-size: 32px;
+    flex-grow: 1;
+    text-align: center;
 }
 
+header .menu {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
 
+header .menu img {
+    height: 30px;
+    cursor: pointer;
+    background-color: #999999;
+    border-radius: 50%;
+}
+
+header .menu span {
+    margin-left: 10px;
+    font-size: 16px;
+}
 
 header .sub-title {
-
+    text-align: center;
     font-size: 1.5em;
     color: #ccc;
     margin-top: 10px
+}
+
+.dialog-menu {
+    display: none;
+    position: absolute;
+    right: 20px;
+    top: 200px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    z-index: 1000;
+}
+
+.dialog-menu p {
+    margin: 0 0 10px;
+}
+
+.dialog-menu button {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+.dialog-menu button:hover {
+    background-color: #0056b3;
 }
 
 nav {
@@ -54,19 +111,10 @@ nav a:hover {
     background-color: #bbb;
 }
 
-.description {
-
-    padding: 40px;
-    color: #555;
-    font-size: 1.2em;
-    line-height: 1.6;
-    text-align: center;
-}
-
 .icon-container {
     position: fixed;
     display: flex;
-    lex-direction: column;
+    flex-direction: column;
     gap: 10px;
 }
 
@@ -100,6 +148,11 @@ nav a:hover {
 .right-icons {
     right: 10px;
     bottom: 10px;
+}
+
+.menu-icons {
+    right: 10px;
+    top: 10px;
 }
 
 .dialog {
@@ -173,7 +226,7 @@ nav a:hover {
     color: #777;
 }
 
-<!------- Store styles --------->
+/*<!------- Store styles --------->*/
 
 .icon-container {
     position: fixed;
@@ -213,7 +266,7 @@ nav a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    adding: 15px;
+    padding: 15px;
     border-bottom: 1px solid #ddd;
 }
 
@@ -245,4 +298,4 @@ nav a:hover {
 .product button:hover {
     background-color: #218838;
 }
-<!-- end -->
+/*-- end --*/
